# OctagonAI

./: LICENSE  Makefile  README.md  octagonai.opam  test.c  test1.c  test2.c
src/: abstractDomain.ml  abstractOperations.ml  abstractTransfers.ml  analyser.ml  closure.ml  dune  octagonai.ml  types.ml  utils.ml
src/octagon/: abstractOperations.ml  types.ml
